# Project

./: .gitignore  CMakeLists.txt  README.md  save.bean
.github/workflows/: cmake.yml
src/: BeanFSM.h  Card.cpp  Card.h  CardContainers.h  CardFactory.cpp  CardFactory.h  Chain.cpp  Chain.h  DiscardPile.cpp  DiscardPile.h  Hand.cpp  Hand.h  IllegalType.h  Player.h  Table.h  TradeArea.h  Utils.h  main.cpp
src/cards/: card.h
